--- a/index.html
+++ b/index.html
@@ -16,17 +16,21 @@
     <main>
         <section>
             <h2>Обо мне</h2>
+            <img src="avatar.jpg" alt="Мой аватар" class="avatar">
             <p>Привет! Я начинающий full-stack разработчик, изучаю веб-разработку.</p>
             <h3>Мои навыки</h3>
             <ul>
                 <li>HTML5 и семантическая разметка</li>
                 <li>Git и GitHub</li>
-                <li>Основы веб-разработки</li>
+                <li>CSS3: стилизация и типографика</li>
+                <li>Flexbox и Grid</li>
+                <li>Responsive дизайн</li>
+                <li>CSS-анимации</li>
             </ul>
         </section>
         <section>
             <h2>Связаться со мной</h2>
-            <form action="..." method="post">
+            <form action="" method="post">
                 <label for="name">Ваше имя:</label>
                 <input type="text" id="name" name="name" placeholder="Введите Ваше имя" required>
                 <label for="email">Email:</label>
