--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Виктор Белёвцев - Визитка</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -26,6 +27,7 @@
                 <li>Flexbox и Grid</li>
                 <li>Responsive дизайн</li>
                 <li>CSS-анимации</li>
+                <li>JavaScript</li>
             </ul>
         </section>
         <section>
@@ -37,6 +39,7 @@
                 <input type="email" id="email" name="email" placeholder="Введите Ваш email" required>
                 <button type="submit">Отправить</button>
             </form>
+            <a href="https://t.me/belyovtseff">Мой Telegram</a>
         </section>
     </main>
     <footer>
