--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Виктор Белёвцев</h1>
         <nav>
-            <a href="https://github.com/belyovtseff">Мой GitHub</a>
+            <a href="https://github.com/belyovtseff" target="_blank">Мой GitHub</a>
         </nav>
     </header>
     <main>
@@ -32,14 +32,8 @@
         </section>
         <section>
             <h2>Связаться со мной</h2>
-            <form action="" method="post">
-                <label for="name">Ваше имя:</label>
-                <input type="text" id="name" name="name" placeholder="Введите Ваше имя" required>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" placeholder="Введите Ваш email" required>
-                <button type="submit">Отправить</button>
-            </form>
-            <a href="https://t.me/belyovtseff">Мой Telegram</a>
+            <a href="https://t.me/belyovtseff" target="_blank">Мой Telegram</a>
+            <a href="https://t.me/devbelyovtseff" target="_blank">Мой Telegram-блог</a>
         </section>
     </main>
     <footer>
