Day 10: Updated portfolio with project list including Calorie Calculator

--- a/index.html
+++ b/index.html
@@ -32,10 +32,18 @@
             <div class="projects__project-bio project-bio">
                 <h3 class="project-bio__title">Визитка</h3>
                 <p class="project-bio__descr">Моя личная страница-визитка, созданная в марафоне.</p>
-                <a href="index.html" class="project-bio__link">Посмотреть</a>
+                <a href="/bio/bio.html" class="project-bio__link">Посмотреть</a>
                 <a href="https://github.com/belyovtseff/fullstack-learning" class="project-bio__link">GitHub</a>
                 <img src="/images/pics/bio.png" alt="Скриншот визитки" class="project-bio__img" onclick="openPopup('/images/pics/bio.png')">
                 <p class="project-bio__stack">Стек: HTML5, CSS3, Git</p>
+            </div>
+            <div class="projects__project-bio project-bio">
+                <h3 class="project-bio__title">Калькулятор калорий</h3>
+                <p class="project-bio__descr">Простой и удобный инструмент, который позволяет быстро рассчитать общую калорийность вашего приёма пищи. Просто добавляйте продукты, указывайте их вес, и калькулятор мгновенно покажет итоговую сумму калорий.</p>
+                <a href="/kkal-calculator/kkal-calc.html" class="project-bio__link">Посмотреть</a>
+                <a href="https://github.com/belyovtseff/fullstack-learning" class="project-bio__link">GitHub</a>
+                <img src="/images/pics/kkal-calc.jpg" alt="Скриншот визитки" class="project-bio__img" onclick="openPopup('/images/pics/kkal-calc.jpg')">
+                <p class="project-bio__stack">Стек: HTML5, CSS3, JavaScript, Git</p>
             </div>
         </section>
         <section id="contacts" class="contacts">
